--- a/src/app/components/cards/cards.component.scss
+++ b/src/app/components/cards/cards.component.scss
@@ -8,6 +8,26 @@
   align-items: center;
   flex-wrap: wrap;
   overflow-y: scroll;
+  gap: 20px;
+  /* width */
+&::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+&::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+&::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+&::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
   &__content{
     width: 250px;
     height: 300px;
@@ -18,6 +38,9 @@
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
+    background-position: center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     &--id{
       position: absolute;
       background-color: red;
@@ -61,14 +84,7 @@
         border-radius: 10px;
         font-family: Georgia, 'Times New Roman', Times, serif
       }
-      :nth-child(1){
-        background-color: blue;
-        color: bisque;
 
-      }
-      :nth-child(2){
-        background-color: red;
-      }
     }
   }
 
