--- a/src/app/components/add/add.component.html
+++ b/src/app/components/add/add.component.html
@@ -40,5 +40,5 @@
       <input type="text" [(ngModel)]="newProdactsForm.laundry" id="laundry">
     </div>
   </div>
-  <button>UPDATE DATA</button>
+  <button (click)="addNewProdact()">UPDATE DATA</button>
 </div>
