--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,5 +1,5 @@
 <div class="cards" *ngIf="products$ | async as data">
-  <div class="cards__content" [style.backgroundImage]="'url(' + item.photo + ')'" *ngFor="let item of data; index as i" >
+  <div class="cards__content" [style.backgroundImage]="item.photo !== 'test'? 'url(' + item.photo + ')' : 'url(https://coralhomes.com.au/wp-content/uploads/Atlanta-Series-1190x680.png)'" *ngFor="let item of data; index as i" >
     <div class="cards__content--id">{{item.id}}</div>
     <span class="cards__content--name">NAME:<p>{{item.name}}</p></span>
     <span class="cards__content--city">CITY:<p>{{item.city}}/{{item.state}}</p></span>
