--- a/src/app/components/bank/credit-card/credit-card.component.html
+++ b/src/app/components/bank/credit-card/credit-card.component.html
@@ -1,1 +1,4 @@
-<p>{{cardInfo.mm}}</p>
+<div class="credit-card">
+  <div class="credit-card__front"></div>
+  <div class="credit-card__back"></div>
+</div>
