--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -16,3 +16,5 @@
   </div>
 </div>
 <button><a routerLink="/add" (click)="onClick()">ADDPRODUCT</a></button>
+
+<button><a routerLink="/bank" (click)="onClick()">BANKCARD</a></button>
