--- a/src/app/components/bank/bank.component.scss
+++ b/src/app/components/bank/bank.component.scss
@@ -12,7 +12,7 @@
   }
   &__form{
     width: 70%;
-    background-color: red;
+    background-color: #918c8c;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -76,13 +76,13 @@
 
     &__card {
       width: 100%;
-      background: #908d92;
+      background:#21092F;
       height: 35%;
     }
 
     &__form {
       width: 100%;
-      background-color: red;
+      background-color: #FFFFFF;
       height: 65%;
       display: flex;
       justify-content: center;
